--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </header>  
 
 <hr>
+
   <section class="top-content">
     <div class="features">
     <h2>Features</h2> 
@@ -89,6 +90,7 @@
       
 
     </div>
+  </div>  
 
   </section>
   <section class="footer">
