--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <div class="container">
   <div class="nav">
     <a href="services.html">Services</a>
-    <a href="services.html">Product</a>
-    <a href="services.html">Vision</a>
-    <a href="services.html">Features</a>
-    <a href="services.html">About</a>
-    <a href="services.html">Contact</a>
+    <a href="#">Product</a>
+    <a href="#">Vision</a>
+    <a href="#">Features</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
   </div>
+
   <header>
     <div class="box-a">
         <h1>Innovation On Demand</h1></br>
